[gd_scene load_steps=21 format=2]

[ext_resource path="res://02_Sfondi_EXPORT_ROTARY/Sfondo_1_sopra.png" type="Texture" id=1]
[ext_resource path="res://04_Sprite_EXPORT_ROTARY/Fuoco2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/TrackManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Minigioco.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MinigameCountdown.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI_elements/PlayerUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/MinigameSlides.tscn" type="PackedScene" id=7]
[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Cutscenes_intro_EXPORT_ROTARY/Cutscenes_Intro_1.png" type="Texture" id=8]
[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Cutscenes_intro_EXPORT_ROTARY/Cutscenes_Intro_2.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Totalizzatore/Totalizzatore.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/FoodList.tscn" type="PackedScene" id=11]
[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Cutscenes_outro_EXPORT_ROTARY/Cutscenes_Outro_1.png" type="Texture" id=12]
[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Cutscenes_outro_EXPORT_ROTARY/Cutscenes_Outro_2.png" type="Texture" id=13]
[ext_resource path="res://04_Sprite_EXPORT_ROTARY/Fuoco1.png" type="Texture" id=14]
[ext_resource path="res://02_Sfondi_EXPORT_ROTARY/Sfondo_1_sotto.png" type="Texture" id=15]
[ext_resource path="res://00_Font_ROTARY/Inconstant-Base100.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://SOund/fire.mp3" type="AudioStream" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 82
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=3]
size = 120
extra_spacing_bottom = -32
font_data = ExtResource( 16 )

[node name="Minigioco" type="Node2D"]
position = Vector2( 0, -7 )
script = ExtResource( 4 )

[node name="Sfondo_sotto" type="Sprite" parent="."]
position = Vector2( 961, 607 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fuoco" type="AnimatedSprite" parent="Sfondo_sotto"]
visible = false
position = Vector2( -7, -25 )
frames = SubResource( 1 )
playing = true

[node name="FireSound" type="AudioStreamPlayer" parent="Sfondo_sotto/Fuoco"]
stream = ExtResource( 17 )

[node name="TrackManagerLeft" parent="." instance=ExtResource( 3 )]
position = Vector2( 124, 539 )

[node name="FoodTrack_1" parent="TrackManagerLeft" index="0"]
acceptable_id = "Basilico"
sprite_rotation = 90.0

[node name="FoodTrack_2" parent="TrackManagerLeft" index="1"]
position = Vector2( 0, 133 )
acceptable_id = "Carota"
sprite_rotation = 90.0

[node name="TrackManagerBottom" parent="." instance=ExtResource( 3 )]
position = Vector2( 897, 1257 )

[node name="FoodTrack_1" parent="TrackManagerBottom" index="0"]
acceptable_id = "Uova"

[node name="FinishingPoint" parent="TrackManagerBottom/FoodTrack_1" index="0"]
position = Vector2( 8, -588 )

[node name="FoodTrack_2" parent="TrackManagerBottom" index="1"]
position = Vector2( 117, -1 )
acceptable_id = "Zucchina"

[node name="FinishingPoint" parent="TrackManagerBottom/FoodTrack_2" index="0"]
position = Vector2( 7, -585 )

[node name="TrackManagerRight" parent="." instance=ExtResource( 3 )]
position = Vector2( 1797, 539 )

[node name="FoodTrack_1" parent="TrackManagerRight" index="0"]
acceptable_id = "Formaggio"
sprite_rotation = -90.0

[node name="FinishingPoint" parent="TrackManagerRight/FoodTrack_1" index="0"]
position = Vector2( -659, 0 )

[node name="FoodTrack_2" parent="TrackManagerRight" index="1"]
position = Vector2( 0, 133 )
acceptable_id = "Gnocchi"
sprite_rotation = -90.0

[node name="FinishingPoint" parent="TrackManagerRight/FoodTrack_2" index="0"]
position = Vector2( -659, 0 )

[node name="TrackManagerTop" parent="." instance=ExtResource( 3 )]
position = Vector2( 897, -41 )

[node name="FoodTrack_1" parent="TrackManagerTop" index="0"]
acceptable_id = "Mozzarella"
sprite_rotation = 180.0

[node name="FinishingPoint" parent="TrackManagerTop/FoodTrack_1" index="0"]
position = Vector2( 8, 578 )

[node name="FoodTrack_2" parent="TrackManagerTop" index="1"]
position = Vector2( 117, -1 )
acceptable_id = "Pomodoro"
sprite_rotation = 180.0

[node name="FinishingPoint" parent="TrackManagerTop/FoodTrack_2" index="0"]
position = Vector2( 7, 581 )

[node name="Sfondo_sopra" type="Sprite" parent="."]
position = Vector2( 960, 607 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1200.0

[node name="PlayerUILeft" parent="UI" instance=ExtResource( 6 )]
player_id = 1

[node name="PlayerUIBottom" parent="UI" instance=ExtResource( 6 )]
margin_top = 606.0
margin_bottom = 1183.0
player_id = 2

[node name="TimerLabel" parent="UI/PlayerUIBottom" index="0"]
margin_left = 48.0
margin_top = 463.0
margin_right = 150.0
margin_bottom = 516.0
rect_rotation = 0.0

[node name="RoundContainer" parent="UI/PlayerUIBottom" index="1"]
margin_left = 26.0
margin_top = 400.0
margin_right = 167.0
margin_bottom = 540.0
rect_rotation = -90.0

[node name="PlayerLabel" parent="UI/PlayerUIBottom" index="2"]
margin_left = 17.0
margin_top = 107.0
margin_right = 167.0
margin_bottom = 160.0
rect_rotation = 0.0

[node name="PlayerUIRight" parent="UI" instance=ExtResource( 6 )]
margin_left = 1725.0
margin_top = 608.0
margin_right = 1907.0
margin_bottom = 1185.0
player_id = 3

[node name="TimerLabel" parent="UI/PlayerUIRight" index="0"]
margin_left = 67.0
margin_top = 533.0
margin_right = 169.0
margin_bottom = 586.0
rect_rotation = -90.0

[node name="RoundContainer" parent="UI/PlayerUIRight" index="1"]
margin_left = 165.0
margin_top = 387.0
margin_right = 306.0
margin_bottom = 527.0
rect_rotation = 180.0

[node name="PlayerLabel" parent="UI/PlayerUIRight" index="2"]
margin_left = 64.0
margin_top = 197.0
margin_right = 214.0
margin_bottom = 250.0
rect_rotation = -90.0

[node name="PlayerUITop" parent="UI" instance=ExtResource( 6 )]
margin_left = 1725.0
margin_top = 13.0
margin_right = 1907.0
margin_bottom = 590.0
player_id = 4

[node name="TimerLabel" parent="UI/PlayerUITop" index="0"]
margin_left = 135.0
margin_top = 118.0
margin_right = 237.0
margin_bottom = 171.0
rect_rotation = 180.0

[node name="RoundContainer" parent="UI/PlayerUITop" index="1"]
margin_left = 156.0
margin_top = 183.0
margin_right = 297.0
margin_bottom = 323.0
rect_rotation = 90.0

[node name="PlayerLabel" parent="UI/PlayerUITop" index="2"]
margin_left = 166.0
margin_top = 471.0
margin_right = 316.0
margin_bottom = 524.0
rect_rotation = 180.0

[node name="MinigameCountdown" parent="UI" instance=ExtResource( 5 )]
margin_top = 7.0
margin_bottom = 7.0

[node name="FoodList" parent="UI" instance=ExtResource( 11 )]
margin_left = 1340.0
margin_top = 885.0
margin_right = 1590.0
margin_bottom = 1135.0

[node name="FireTimerLabel" type="Label" parent="UI"]
visible = false
margin_left = 484.0
margin_top = 1094.0
margin_right = 588.0
margin_bottom = 1181.0
custom_fonts/font = SubResource( 2 )
text = "05"
align = 1
valign = 1

[node name="TimeOut" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = 7.0

[node name="ColorRect" type="ColorRect" parent="UI/TimeOut"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )

[node name="CounterLabel" type="Label" parent="UI/TimeOut"]
margin_top = 527.0
margin_right = 1920.0
margin_bottom = 701.0
custom_fonts/font = SubResource( 3 )
text = "Time out!"
align = 1
valign = 1
uppercase = true

[node name="TimeOutTimer" type="Timer" parent="UI/TimeOut"]
wait_time = 2.0

[node name="IntroSlides" parent="." instance=ExtResource( 7 )]
position = Vector2( 960, 607 )
slides = [ ExtResource( 8 ), ExtResource( 9 ) ]

[node name="OutroSlides" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 960, 607 )
texture = ExtResource( 12 )
slides = [ ExtResource( 12 ), ExtResource( 13 ) ]

[node name="Totalizzatore" parent="." instance=ExtResource( 10 )]
visible = false
margin_top = 7.0
margin_right = 1920.0
margin_bottom = 1207.0

[node name="LevelTimer" type="Timer" parent="."]

[node name="FireTimer" type="Timer" parent="."]

[connection signal="countdown_finished" from="UI/MinigameCountdown" to="." method="_on_countdown_finished"]
[connection signal="slides_finished" from="IntroSlides" to="." method="start_minigame"]
[connection signal="slides_finished" from="OutroSlides" to="." method="_on_outro_slides_read"]
[connection signal="results_read" from="Totalizzatore" to="." method="_on_results_read"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]

[editable path="TrackManagerLeft"]
[editable path="TrackManagerBottom"]
[editable path="TrackManagerBottom/FoodTrack_1"]
[editable path="TrackManagerBottom/FoodTrack_2"]
[editable path="TrackManagerRight"]
[editable path="TrackManagerRight/FoodTrack_1"]
[editable path="TrackManagerRight/FoodTrack_2"]
[editable path="TrackManagerTop"]
[editable path="TrackManagerTop/FoodTrack_1"]
[editable path="TrackManagerTop/FoodTrack_2"]
[editable path="UI/PlayerUILeft"]
[editable path="UI/PlayerUIBottom"]
[editable path="UI/PlayerUIRight"]
[editable path="UI/PlayerUITop"]
[editable path="UI/FoodList"]
